src/test/deca/context/valid/created/class-method-params.deca
//Description :
// Test d'une déclaration de méthode avec paramètre dans une classe
//
// Resultats :
// 


class Premiere {

    void affiche(int i, float f) {
        print("Yo : ", i, f);
    }
}

{}
