src/test/deca/context/invalid/created/class-method-double-def.deca
//Description :
// Test d'une déclaration de deux méthodes avec le même nom
//
// Resultats :
// Erreur


class Premiere {

    void affiche(int i, float f) {
        print("Yo : ", i, f);
    }

    void affiche(int i) {
        print("Yo :", i);
    }
}

{}
